# do-able

./: .gitignore  LICENSE  README.md  TRACKER.md  api.md  app.js  dashboard-snap.yml  design.md  directory-structure.md  doable.html  events.js  homepage-concept.css  homepage-concept.html  homepage-concept.js  index.html  site.webmanifest  split_files.py  start.bat  stop.bat  sw.js  todo-prompt.txt
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routes/: activity.py  backups.py  bin.py  export.py  focus.py  scratch.py  search.py  sync.py  task_series.py  tasks.py  templates.py
backend/app/services/: activity_service.py  bin_service.py  config_service.py  dashboard_service.py  export_service.py  focus_service.py  scratch_service.py  task_series_service.py  task_service.py  template_service.py
backend/tests/: conftest.py  test_series.py  test_tasks.py  test_templates.py
backup-backend/: pyproject.toml  requirements.txt
backup-backend/app/: database.py  main.py  models.py
backup-backend/app/routes/: bin.py  config.py  dashboard.py  scratch.py
backup-backend/app/services/: backup_service.py  bin_service.py  config_service.py  scratch_service.py  task_service.py
backup-backend/todo_todo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backup-frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
backup-frontend/src/: App.js  App.tsx
backup-frontend/src/api/: client.js  (+1 more)
docs/: TRACKER.md  api.md  conceptual-model.md  design.md  directory-structure.md
src/: app.js  events.js  site.webmanifest  ui.js
(+33 files in other folders)
